# telemedi-app

./: .codecov.yml  .copyright  .env  .travis.yml  Cargo.toml  Dockerfile  build.gradle.kts  diesel.toml  gradle.properties  micronaut-cli.yml  settings.gradle.kts
migrations/2020-08-02-184457_telemedi-app/: down.sql  up.sql
src/: main.rs  model.rs
src/main/kotlin/co/avaldes/telemedi/: Application.kt
src/main/kotlin/co/avaldes/telemedi/common/: IdentityDocumentType.kt  Sex.kt
src/main/kotlin/co/avaldes/telemedi/database/: DatabaseConnection.kt
src/main/kotlin/co/avaldes/telemedi/database/common/: NoteTable.kt  TagTable.kt
src/main/kotlin/co/avaldes/telemedi/database/common/enum/: PGEnum.kt
src/main/kotlin/co/avaldes/telemedi/database/patient/: PatientNotes.kt  PatientTags.kt  Patients.kt
src/main/kotlin/co/avaldes/telemedi/domain/: Patient.kt  PatientNote.kt  PatientTag.kt
src/main/resources/: application.yml
src/model/: enums.rs  patient.rs  schema.rs
src/test/kotlin/co/avaldes/telemedi/: AppTest.kt
