[package]
name = "telemedi-app"
version = "0.1.0"
authors = ["Alejandro Valdes <alejandrovaldes@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.1"
chrono = { version = "0.4.13", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
dotenv = "0.15.0"
juniper = "0.14.2"
r2d2 = "0.8.9"
serde = { version = "1.0.114", features = ["derive"] }
structopt = "0.3.15"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
wundergraph = "0.1.2"
